fixed a few issues
fixed swagger https problem
edit refresh controller
create Error Response Dto
fixed Reservation logic